--- a/note_project/Base.lproj/Tasks.storyboard
+++ b/note_project/Base.lproj/Tasks.storyboard
@@ -10,7 +10,7 @@
         <!--課題リスト-->
         <scene sceneID="F2T-T2-H2U">
             <objects>
-                <tableViewController id="yp5-Qs-GiX" customClass="TaskTableViewController" customModule="note_project" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="yp5-Qs-GiX" customClass="TaskTableViewController" customModule="note_project" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Otd-bh-YaZ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                             <items/>
                         </tabBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="NYK-0l-bBE">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ToDoItemCell" id="NYK-0l-bBE">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="NYK-0l-bBE" id="D3Q-WM-yrN">
@@ -31,20 +31,25 @@
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="yp5-Qs-GiX" id="wQH-hc-8AL"/>
-                            <outlet property="delegate" destination="yp5-Qs-GiX" id="9PF-5l-Qj4"/>
-                        </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Homework" image="book" catalog="system" id="3KB-7S-4Wf"/>
+                    <tabBarItem key="tabBarItem" title="Homework" image="pencil.and.ellipsis.rectangle" catalog="system" id="3KB-7S-4Wf"/>
                     <navigationItem key="navigationItem" title="課題リスト" id="wt0-1X-6UC">
+                        <barButtonItem key="leftBarButtonItem" title="てす" id="emd-V8-eZc">
+                            <connections>
+                                <action selector="goBackMemo:" destination="yp5-Qs-GiX" id="1Yr-Ac-hI8"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Add" image="plus" catalog="system" style="done" id="E0h-tj-Gi2">
                             <connections>
-                                <segue destination="1bZ-ID-xYg" kind="show" id="OWd-FA-yMY"/>
+                                <segue destination="1bZ-ID-xYg" kind="show" id="vYg-wi-ydb"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="goBackMemo" destination="emd-V8-eZc" id="XV7-Qb-t28"/>
+                        <outlet property="taskTable" destination="Otd-bh-YaZ" id="73z-WI-E3H"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZX8-F1-Dd4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -53,81 +58,104 @@
         <!--課題を追加-->
         <scene sceneID="7gw-FX-fET">
             <objects>
-                <viewController id="1bZ-ID-xYg" customClass="TaskTableViewController" customModule="note_project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1bZ-ID-xYg" customClass="AddTaskController" customModule="note_project" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HHf-ZW-UDc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="科目名" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k12-va-Sgw">
-                                <rect key="frame" x="20" y="115" width="62" height="24"/>
+                                <rect key="frame" x="20" y="115" width="106" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="課題内容" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DOo-jB-cYY">
-                                <rect key="frame" x="20" y="166" width="82" height="24"/>
+                                <rect key="frame" x="20" y="166" width="128" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M4f-tq-wmI">
+                            <textField opaque="NO" tag="2" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="○○学A" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M4f-tq-wmI">
                                 <rect key="frame" x="159" y="110" width="235" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="例: 第○回の授業の感想を200字以内で書き、授業用フォルダへ提出。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="scn-hc-B4Q">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="3" contentMode="scaleToFill" fixedFrame="YES" text="例: 第○回の授業の感想を200字以内で書き、授業用フォルダへ提出。" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="scn-hc-B4Q">
                                 <rect key="frame" x="20" y="188" width="374" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" systemColor="opaqueSeparatorColor" red="0.77647058820000003" green="0.77647058820000003" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="提出期限" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZKx-Kx-CFw">
-                                <rect key="frame" x="20" y="327" width="82" height="24"/>
+                                <rect key="frame" x="20" y="327" width="106" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHr-QY-oP6">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHr-QY-oP6">
                                 <rect key="frame" x="159" y="324" width="208" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="2020年12月31日 9:20"/>
+                                <connections>
+                                    <action selector="ButtonTimeLimit:" destination="1bZ-ID-xYg" eventType="touchDown" id="1ws-e6-wks"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="通知" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I3c-ek-4QM">
-                                <rect key="frame" x="20" y="367" width="41" height="24"/>
+                                <rect key="frame" x="20" y="367" width="106" height="24"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LyM-52-1jO">
+                            <button opaque="NO" tag="5" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LyM-52-1jO">
                                 <rect key="frame" x="159" y="362" width="208" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="提出期限の3時間前"/>
+                                <connections>
+                                    <action selector="ButtonNotification:" destination="1bZ-ID-xYg" eventType="touchDown" id="zcL-LF-k2z"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Le2-hL-X8A">
+                                <rect key="frame" x="144" y="422" width="127" height="53"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="課題を登録">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="ButtonTouchDown:" destination="1bZ-ID-xYg" eventType="touchDown" id="9SY-e8-j5g"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="4IN-7f-vJk"/>
                     </view>
-                    <navigationItem key="navigationItem" title="課題を追加" id="GiB-S3-hXy">
-                        <barButtonItem key="rightBarButtonItem" title="登録" id="8au-dR-S7v"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="課題を追加" id="GiB-S3-hXy"/>
+                    <connections>
+                        <outlet property="notification" destination="LyM-52-1jO" id="kBX-Au-lNV"/>
+                        <outlet property="subjectTitle" destination="M4f-tq-wmI" id="lYh-Yq-RSz"/>
+                        <outlet property="taskDescription" destination="scn-hc-B4Q" id="UKb-JU-awi"/>
+                        <outlet property="taskRegister" destination="Le2-hL-X8A" id="mZM-o4-rUD"/>
+                        <outlet property="taskTimeLimit" destination="YHr-QY-oP6" id="s1u-go-0gg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qwh-g6-QD7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="718.84057971014499" y="87.723214285714278"/>
+            <point key="canvasLocation" x="749" y="73"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Task Navi Controller-->
         <scene sceneID="Ggx-cs-kKx">
             <objects>
-                <navigationController id="e7J-tb-IG5" sceneMemberID="viewController">
+                <navigationController id="e7J-tb-IG5" customClass="TaskNaviController" customModule="note_project" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tP5-Vp-YgL">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -142,7 +170,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="book" catalog="system" width="128" height="101"/>
+        <image name="pencil.and.ellipsis.rectangle" catalog="system" width="128" height="81"/>
         <image name="plus" catalog="system" width="128" height="113"/>
     </resources>
 </document>
